# IC_Project3

./: .gitignore  README.md
opencv-bin/: program2  program2_dec  program2_enc  program3_dec  program3_enc  program4_dec_inter
programs/: CMakeLists.txt  Makefile  Reader.h  bitStream.h  golomb.h  program2.cpp  program2_dec.cpp  program2_enc.cpp  program3_dec.cpp  program3_enc.cpp  program4_dec_inter.cpp  program4_dec_intra.cpp  program4_enc_inter.cpp  program4_enc_intra.cpp
